terraform/network.tf
resource "aws_internet_gateway" "stockai_igw" {
  vpc_id = aws_vpc.stockai_vpc.id

  tags = {
    Name = "stockai-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.stockai_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.stockai_igw.id
  }

  tags = {
    Name = "stockai-public-route-table"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.stockai_vpc.id

  tags = {
    Name = "stockai-private-route-table"
  }
}

resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}
